# synopsoid

./: Cargo.toml  README.md
src/: filereader.rs  lib.rs  main.rs
